# omniclaw

./: .gitignore  CHANGELOG.md  README.md  build.sh  erc_804_spec.md  pyproject.toml  pytest.ini  rename_script.py
.github/workflows/: build-binaries.yml
docs/: API_REFERENCE.md  CCTP_AUTONOMOUS_SETUP.md  CCTP_USAGE.md  FEATURES.md  GAS_REQUIREMENTS.md  MCP_SERVER_ARCHITECTURE.md  OMNIAGENTPAY_VISION.md  OMNICLAW_VISION.md  PROTOCOL_RESEARCH.md  ROADMAP.md  ROADMAP_STATUS.md  SDK_USAGE_GUIDE.md  STRATEGIC_ROADMAP.md  generate_pdf.py
docs/specs/: 001_resilience_circuit_breaker.md  002_risk_engine.md
examples/: __init__.py  basic_payment.py  dry_run_simulation.py  gemini_agent.py  ledger_tracking.py  test_risk.py  test_wallet_features.py  test_x402_e2e.py  using_guards.py  x402_client_cctp.py  x402_client_demo.py  x402_server.py
scripts/: create_demo_wallets.py  create_demo_wallets_manual.py  create_eth_wallet.py  demo_x402_test.py  setup_cctp_test_wallets.py  test_destination_chain.py  test_guards_comprehensive.py  test_phase2.py  test_reservation.py  test_smart_routing.py  test_sync.py  test_wallet_api.py  test_wallet_service_e2e.py  test_webhooks.py  verify_sdk_core.py
src/omniagentpay/: __init__.py  client.py  onboarding.py
src/omniagentpay/core/: circle_client.py  config.py  events.py  exceptions.py  logging.py  types.py
src/omniagentpay/guards/: __init__.py  base.py  budget.py  confirm.py  manager.py  rate_limit.py  recipient.py  single_tx.py
src/omniagentpay/intents/: service.py
src/omniagentpay/ledger/: __init__.py  ledger.py
src/omniagentpay/payment/: __init__.py  batch.py  router.py
src/omniagentpay/protocols/: __init__.py  base.py  gateway.py  transfer.py  x402.py
src/omniagentpay/storage/: __init__.py  base.py  memory.py  redis.py
src/omniagentpay/wallet/: __init__.py  service.py
src/omniagentpay/webhooks/: __init__.py  parser.py
src/omniclaw/: __init__.py  client.py  onboarding.py
src/omniclaw/core/: cctp_constants.py  circle_client.py  config.py  erc8004.py  events.py  exceptions.py  gateway_client.py  logging.py  types.py
src/omniclaw/guards/: __init__.py  base.py  budget.py  confirm.py  manager.py  rate_limit.py  recipient.py  single_tx.py
src/omniclaw/identity/: __init__.py  resolver.py  types.py
src/omniclaw/intents/: intent_facade.py  reservation.py  service.py
src/omniclaw/ledger/: __init__.py  ledger.py  lock.py
src/omniclaw/payment/: __init__.py  batch.py  router.py
src/omniclaw/protocols/: __init__.py  base.py  gateway.py  transfer.py  x402.py
src/omniclaw/resilience/: __init__.py  circuit.py  retry.py
src/omniclaw/risk/: factors.py  guard.py
src/omniclaw/storage/: __init__.py  base.py  memory.py  redis.py
src/omniclaw/trust/: __init__.py  cache.py  gate.py  policy.py  provider.py  scoring.py
src/omniclaw/utils/: __init__.py  gas.py
src/omniclaw/wallet/: __init__.py  service.py
src/omniclaw/webhooks/: __init__.py  parser.py
tests/: __init__.py  conftest.py  test_cctp_constants.py  test_cctp_manual_mint.py  test_circuit_breaker.py  test_client.py  test_config.py  test_exceptions.py  test_fund_lock.py  test_gas.py  test_gateway.py  test_guard_edge_cases.py  test_guards.py  test_intent_lifecycle.py  test_ledger.py  test_payment_concurrency.py  test_payment_failures.py  test_payment_intents.py  test_payment_router.py  test_setup.py  test_simulation.py  test_trust_gate.py  test_trust_gate_integration.py  test_types.py  test_wallet_service.py  test_webhook_verification.py  test_x402.py
